--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 4.0)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_STANDARD 23)
-set(CMAKE_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_C_COMPILER clang)
 set(CMAKE_CXX_COMPILER clang++)
@@ -12,11 +12,11 @@ file(GLOB include "${PROJECT_SOURCE_DIR}/include/*.hpp")
 find_package(ImageMagick COMPONENTS Magick++)
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(jsoncpp REQUIRED jsoncpp)
-add_executable(cppwal ${sources} ${headers})
+add_executable(cppwal ${sources} ${include})
 if(ImageMagick_FOUND)
   include_directories(${ImageMagick_INCLUDE_DIRS})
   target_link_libraries(cppwal ${ImageMagick_LIBRARIES} MagickCore-7.Q16HDRI)
-  add_definitions(-DMAGICKCORE_HDRI_ENABLE=1 -DMAGICKCORE_QUANTUM_DEPTH=16)
+  add_definitions(-DMAGICKCORE_HDRI_ENABLE=1 -DMAGICKCORE_QUANTUM_DEPTH=16 -DMAGICKCORE_CHANNEL_MASK_DEPTH=32)
 else()
   message(FATAL_ERROR "ImageMagick Library not found")
 endif()
