--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_C_COMPILER clang)
 set(CMAKE_CXX_COMPILER clang++)
+set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 project(CPPWAL)
 include_directories(${PROJECT_SOURCE_DIR}/include)
 file(GLOB sources "${PROJECT_SOURCE_DIR}/source/*.cpp")
